[tool.poetry]
name = "dotifi"
version = "0.1.0"
license = "Apache-2.0"
description = "Generate DOT files and images from Apache Nifi Flows"
authors = ["Otto Fowler <ottobackwards@gmail.com>"]
include = ["configurations/sample.yaml"]

[tool.poetry.scripts]
dotifi = "dotifi.dotifi:process"

[tool.poetry.dependencies]
python = "^3.7"
pygraphviz = "^1.5"
nipyapi = "^0.14.3"
pyyaml = "^5.3.1"
confuse = "^1.1.0"
jsonpickle = "^1.4.1"
wheel = "^0.34.2"
pytest-mock = "^3.1.0"
mock = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
