[tool.poetry]
name = "dotifi"
version = "0.1.1"
license = "Apache-2.0"
description = "Generate DOT files and images from Apache Nifi Flows"
authors = ["Otto Fowler <ottobackwards@gmail.com>"]
maintainers = ["palindromicity <github.palindromicity@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/palindromicity/dotifi"
repository = "https://github.com/palindromicity/dotifi"
keywords = ["nifi", "graphviz", "pygraphvis", "nipyapi"]
include = ["configurations/sample.yaml"]

[tool.poetry.scripts]
dotifi = "dotifi.dotifi:process"

[tool.poetry.urls]
issues = "https://github.com/palindromicity/dotifi/issues"

[tool.poetry.dependencies]
python = "^3.7"
pygraphviz = "^1.5"
nipyapi = "^0.14.3"
pyyaml = "^5.3.1"
confuse = "^1.1.0"
jsonpickle = "^1.4.1"
wheel = "^0.34.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
docker = "^4.2.1"
pytest-mock = "^3.1.0"
mock = "^4.0.2"
pre-commit = "^2.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
